--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="wrapper">
       <header>
         <h1>Hackathon + Training Day</h1>
-        <p>December Civic Hacakthon + Training Day</p>
+        <p>Civic Hackthon + Training Day</p>
+        <p>December 7, 2013</p>
 
         <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub <small>leahbannon/hackathontrainingday</small></a></p>
 
