--- a/index.html
+++ b/index.html
@@ -32,9 +32,20 @@
 <h3>
 <a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this Civic Hackathon + Training Day</h3>
 
-<p>This hackathon is being organized by Tech LadyMafia, Rails Girls, PyLadies, and Code for DC.</p>
-
-
+<p>This hackathon is being organized by Tech LadyMafia, Rails Girls, PyLadies, Data Lady Alliance, Code for DC, and more!</p>
+<p>Coders, tech strategists, trainers, newbies, and ideas are welcome!</p>
+<p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech.
+</p>
+<p>We're still working out the details. Please share your feedback in the form or through one of the links below.</p>
+<p><strong>Training</strong></p>
+<p>We're going to offer 101s throughout the day. Attend training all day, or dip in and out while you contribute to a hackathon project. Right now, we're thinking of offering Python, Ruby, SQL, GitHub, APIs, Open Data, and Google Analytics. Are we missing anything important?
+</p>
+<h3>Also</h3>
+<p>A few housekeeping items...</p>
+  <ul>
+<li>Short link to this page until Leah can figure out how to cname from terminal... <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a>
+  <li>Discuss! Tweet at <a href="http://twitter.com/leahbannon">@leahbannon</a>, post a question/comment/idea/suggestion <a href="https://github.com/leahbannon/hackathontrainingday/issues">as an issue on GitHub</a>, or discuss on the <a href="https://github.com/leahbannon/hackathontrainingday/wiki">wiki</a>.</li>
+  </ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/leahbannon">leahbannon</a></p>
