--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <h3>
 <a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this Civic Hackathon + Training Day</h3>
 
-<p>This hackathon is being organized by Tech LadyMafia, Rails Girls, PyLadies, Data Lady Alliance, Code for DC, and more!</p>
+<p>This hackathon is brought to you by Tech LadyMafia, Rails Girls, PyLadies, Data Lady Alliance, Code for DC, and more!</p>
 <p>Coders, tech strategists, trainers, newbies, and ideas are welcome!</p>
 <p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech.
 </p>
