--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section>
         
 <h3>
-<a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this Civic Hackathon + Training Day</h3>
+<a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this  Hackathon + Training Day</h3>
 
 <p>This hackathon is brought to you by Tech LadyMafia, Rails Girls, PyLadies, Data Lady Alliance, Code for DC, and more!</p>
 <p>Coders, tech strategists, trainers, newbies, and ideas are welcome!</p>
@@ -39,6 +39,9 @@
 <p>We're still working out the details. Please share your feedback in the form or through one of the links below.</p>
 <p><strong>Training</strong></p>
 <p>We're going to offer 101s throughout the day. Attend training all day, or dip in and out while you contribute to a hackathon project. Right now, we're thinking of offering Python, Ruby, SQL, GitHub, APIs, Open Data, and Google Analytics. Are we missing anything important?
+</p>
+<p><strong>Hackathon</strong></p>
+<p>We're planning to work on some projects and challenges suggested by lady small business and organizations that use gov open data, including some civic projects. Please submit ideas.
 </p>
 <h3>Also</h3>
 <p>A few housekeeping items...</p>
