Final draft content

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         <h1>Hackathon + Training Day</h1>
         <p>December 7, 2013</p>
 
-        <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub <small>leahbannon/hackathontrainingday</small></a></p>
-
-
+        <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub <br/><small>leahbannon/hackathontrainingday</small></a></p>
+        <p class="view">Short link: <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a> <br/><small>Soon I'll also figure out the cname...</small></p>
+        <br/>
+        <p class="view"><strong>Discuss!</strong><br/><small>Please share your question/comment/idea/suggestion!</small></p>
         <ul>
-          <li><a href="https://github.com/leahbannon/hackathontrainingday/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/leahbannon/hackathontrainingday/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/leahbannon/hackathontrainingday">View On <strong>GitHub</strong></a></li>
+         
+          <li><a href="https://github.com/leahbannon/hackathontrainingday/wiki">Discuss on the <strong>Wiki</strong></a></li>
+          <li><a href="https://github.com/leahbannon/hackathontrainingday/issues">Create an issue <strong>GitHub</strong></a></li>
+           <li><a href="https://twitter.com/leahbannon">Tweet at me!<strong>@</strong></a></li>
         </ul>
       </header>
       <section>
@@ -32,23 +34,22 @@
 <h3>
 <a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this  Hackathon + Training Day</h3>
 
-<p>This hackathon is brought to you by Tech LadyMafia, Rails Girls, PyLadies, Data Lady Alliance, Code for DC, and more!</p>
-<p>Coders, tech strategists, trainers, newbies, and ideas are welcome!</p>
-<p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech.
-</p>
-<p>We're still working out the details. Please share your feedback in the form or through one of the links below.</p>
-<p><strong>Training</strong></p>
-<p>We're going to offer 101s throughout the day. Attend training all day, or dip in and out while you contribute to a hackathon project. Right now, we're thinking of offering Python, Ruby, SQL, GitHub, APIs, Open Data, and Google Analytics. Are we missing anything important?
-</p>
-<p><strong>Hackathon</strong></p>
-<p>We're planning to work on some projects and challenges suggested by lady small business and organizations that use gov open data, including some civic projects. Please submit ideas.
-</p>
+<p>This hackathon is brought to you by Tech LadyMafia, Rails Girls, PyLadies, Data Lady Alliance, Code for DC, and more! Coders, tech strategists, trainers, newbies, and ideas are welcome!</p>
+<p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech. <strong>We're still working out the details.</strong> Please share your feedback in the form or through one of the links below.</p>
+<p><strong>Training</strong><br/>
+We're going to offer 101s throughout the day. Attend training all day, or dip in and out while you contribute to a hackathon project. Right now, we're thinking of offering Python, Ruby, SQL, GitHub, APIs, Open Data, and Google Analytics. Are we missing anything important?</p>
+<p><strong>Hackathon</strong><br/>
+We're planning to work on some projects and challenges suggested by lady small business and organizations that use gov open data, including some civic projects. Please submit ideas.
+</p>   <!--
 <h3>Also</h3>
 <p>A few housekeeping items...</p>
   <ul>
+ 
 <li>Short link to this page until Leah can figure out how to cname from terminal... <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a>
   <li>Discuss! Tweet at <a href="http://twitter.com/leahbannon">@leahbannon</a>, post a question/comment/idea/suggestion <a href="https://github.com/leahbannon/hackathontrainingday/issues">as an issue on GitHub</a>, or discuss on the <a href="https://github.com/leahbannon/hackathontrainingday/wiki">wiki</a>.</li>
-  </ul>
+  </ul>-->
+<iframe src="https://docs.google.com/forms/d/1UUaDHtVqfA_rOgd2EFD53bZxbGHf9HEbS5YHWUTtmdo/viewform?embedded=true" width="600" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/leahbannon">leahbannon</a></p>
