--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ We're planning to work on some projects and challenges suggested by lady small b
 <li>Short link to this page until Leah can figure out how to cname from terminal... <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a>
   <li>Discuss! Tweet at <a href="http://twitter.com/leahbannon">@leahbannon</a>, post a question/comment/idea/suggestion <a href="https://github.com/leahbannon/hackathontrainingday/issues">as an issue on GitHub</a>, or discuss on the <a href="https://github.com/leahbannon/hackathontrainingday/wiki">wiki</a>.</li>
   </ul>-->
+<h3>Questions? Ideas? Advice?</h3>
+<p>Please feel free to contact Leah Bannon if you have any questions, project ideas, training requests/ideas, or advice by <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a>.</p>
 <iframe src="https://docs.google.com/forms/d/1UUaDHtVqfA_rOgd2EFD53bZxbGHf9HEbS5YHWUTtmdo/viewform?embedded=true" width="600" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
       </section>
