--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <h3>
 <a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this  Hackathon + Training Day</h3>
 
-<p>This hackathon is brought to you by Tech LadyMafia, Rails Girls, PyLadies, Data Lady Alliance, Code for DC, and more! Coders, tech strategists, trainers, newbies, and ideas are welcome!</p>
+<p>This hackathon is brought to you by Leah Bannon with Code for DC & Tech LadyMafia. Coders, tech strategists, trainers, newbies, and ideas are welcome!</p>
 <p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech. <strong>We're still working out the details.</strong> Please share your feedback in the form or through one of the links below.</p>
 <p><strong>Training</strong><br/>
-We're going to offer 101s throughout the day. Attend training all day, or dip in and out while you contribute to a hackathon project. Right now, we're thinking of offering Python, Ruby, SQL, GitHub, APIs, Open Data, and Google Analytics. Are we missing anything important?</p>
+We're going to offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project. Are we missing anything important? Submit issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a> or email <a href="mailto:leahbannon@gmail.com">Leah</a>.</p>
 <p><strong>Hackathon</strong><br/>
 We're planning to work on some projects and challenges suggested by lady small business and organizations that use gov open data, including some civic projects. Please submit ideas.
 </p>   <!--
