--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>December 7, 2013</p>
 
         <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub <br/><small>leahbannon/hackathontrainingday</small></a></p>
-        <p class="view">Short link: <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a> <br/><small>Soon I'll also figure out the cname...</small></p>
+        <p class="view">Short link: <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a> <br/><small>Long link: <a href="http://hackathontrainingday.org">hackathontrainingday.org</a></small></p>
         <br/>
         <p class="view"><strong>Discuss!</strong><br/><small>Please share your question/comment/idea/suggestion!</small></p>
         <ul>
@@ -37,7 +37,7 @@
 <p>This hackathon is brought to you by Leah Bannon with Code for DC & Tech LadyMafia. Coders, tech strategists, trainers, newbies, and ideas are welcome!</p>
 <p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech. <strong>We're still working out the details.</strong> Please share your feedback in the form or through one of the links below.</p>
 <p><strong>Training</strong><br/>
-We're going to offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project. Are we missing anything important? Submit issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a> or email <a href="mailto:leahbannon@gmail.com">Leah</a>.</p>
+We're going to offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project. Right now, we're planning to offer: Ruby, APIs, Python, JavaScript, GitHub, html/CSS, and SQL. Mentoring session ideas so far are: Empowerment/imposter syndrome, open gov/open data, and a business lady session. Ideas? Are we missing anything important? Submit issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a> or email <a href="mailto:leahbannon@gmail.com">Leah</a>.</p>
 <p><strong>Hackathon</strong><br/>
 We're planning to work on some projects and challenges suggested by lady small business and organizations that use gov open data, including some civic projects. Please submit ideas.
 </p>   <!--
