--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hackathon + Training Day by leahbannon</title>
+    <title>TechLady Hackathon + Training Day by leahbannon</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Hackathon + Training Day</h1>
+        <h1>TechLady Hackathon + Training Day</h1>
         <p>December 7, 2013</p>
 
         <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub <br/><small>leahbannon/hackathontrainingday</small></a></p>
@@ -32,7 +32,7 @@
       <section>
         
 <h3>
-<a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this  Hackathon + Training Day</h3>
+<a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this  TechLady Hackathon + Training Day</h3>
 
 <p>This hackathon is brought to you by Leah Bannon with Code for DC & Tech LadyMafia. Coders, tech strategists, trainers, newbies, and ideas are welcome!</p>
 <p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech. <strong>We're still working out the details.</strong> Please share your feedback in the form or through one of the links below.</p>
