--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p><strong>Training</strong><br/>
 We're going to offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project. Right now, we're planning to offer: Ruby, APIs, Python, JavaScript, GitHub, html/CSS, and SQL. Mentoring session ideas so far are: Empowerment/imposter syndrome, open gov/open data, and a business lady session. Ideas? Are we missing anything important? Submit issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a> or email <a href="mailto:leahbannon@gmail.com">Leah</a>.</p>
 <p><strong>Hackathon</strong><br/>
-We're planning to work on some projects and challenges suggested by lady small business and organizations that use gov open data, including some civic projects. Please submit ideas.
+We're planning to work on some awesome projects and challenges, mostly with a focus on open gov projects and helping out some cool lady small business. Please submit ideas!
 </p>  
 <h3>Questions? Ideas? Advice?</h3>
 <p>Please feel free to contact Leah Bannon if you have any questions, project ideas, training requests/ideas, or advice by <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a>.</p>
