--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h3>
 <a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this  TechLady Hackathon + Training Day</h3>
 
-<p>Coders, tech strategists, trainers, newbies, and ideas are welcome! <strong><a href="http://techladyhackathon.eventbrite.com">Go sign up now!!!</a></strong></p>
+<p>Coders, tech strategists, trainers, newbies, and ideas are welcome! <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet</a> at Leah Bannon for the regsistration link.</p>
 <p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech. This hackathon is brought to you by Leah Bannon with Code for DC & Tech LadyMafia.</p>
 <p><strong>Training</strong><br/>
 We're going to offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project.</p>
