--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>Coders, tech strategists, trainers, newbies, and ideas are welcome! <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet</a> at Leah Bannon for the registration link.</p>
 <p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech. This hackathon is brought to you by Leah Bannon with Code for DC & Tech LadyMafia.</p>
 
-<p><strong>Saturday Dec. 7 Hackathon</strong></p> is for women identified folks. <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet</a> at Leah Bannon for the registration link.<br/>
+<p><strong>Saturday Dec. 7 Hackathon</strong> is for women identified folks. <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet</a> at Leah Bannon for the registration link.<br/>
 <strong>Friday Dec. 6  pre-party at MapBox</strong> is for everyone! Sign up: <a href="http://techladyparty.eventbrite.com">techladyparty.eventbrite.com</a>.
 </p>
 
