--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
 <h3>
 <a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this  TechLady Hackathon + Training Day</h3>
 
-<p>Coders, tech strategists, trainers, newbies, and ideas are welcome! <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet</a> at Leah Bannon for the registration link.</p>
-<p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech. This hackathon is brought to you by Leah Bannon with Code for DC & Tech LadyMafia.</p>
+<p>Coders, tech strategists, trainers, newbies, and ideas are welcome! <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet at me</a> for the registration link.</p>
+<p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech.</p>
 
-<p><strong>Saturday Dec. 7 Hackathon</strong> is for women identified folks. <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet</a> at Leah Bannon for the registration link.<br/>
+<p><strong>Saturday Dec. 7 Hackathon</strong> is for women identified folks. <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet at me</a> for the registration link.<br/>
 <strong>Friday Dec. 6  pre-party at MapBox</strong> is for everyone! Sign up: <a href="http://techladyparty.eventbrite.com">techladyparty.eventbrite.com</a>.
 </p>
 
 <p><strong>Training</strong><br/>
 We're going to offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project.</p>
-<p>Right now, we're planning to offer: Ruby, APIs, Python, JavaScript, GitHub, html/CSS, and SQL. Mentoring session ideas so far are: Empowerment/imposter syndrome, open gov/open data, and a business lady session. Ideas? Are we missing anything important? Submit issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a> or email <a href="mailto:leahbannon@gmail.com">Leah</a>.</p>
+<p>Right now, we're planning to offer: Ruby, APIs, Python, JavaScript, GitHub, html/CSS, and SQL. Mentoring session ideas so far are: Empowerment/imposter syndrome, open gov/open data, and a business lady session. Ideas? Are we missing anything important? Submit issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a> or <a href="mailto:leahbannon@gmail.com">email</a>.</p>
 <p><strong>Hackathon</strong><br/>
 We're planning to work on some awesome projects and challenges, mostly with a focus on open gov projects and helping out some cool lady small business. Please submit ideas!
 </p>  
 <h3>Questions? Ideas? Advice?</h3>
-<p>Please feel free to contact Leah Bannon if you have any questions, project ideas, training requests/ideas, or advice by <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a>.</p>
+<p>Please feel free to reach out via <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a> with any questions, ideas, or issues. This hackathon is brought to you by Leah Bannon with Code for DC and Tech LadyMafia, and <a href="http://twitter.com/diplokat">Kat Townsend</a>, <a href="http://twitter.com/higgjen">Jen Higgens</a>, <a href="http://twitter.com/svt827">Shannon Turner</a>, <a href="http://twitter.com/sarah_rigdon">Sarah Rigdon</a>, <a href="http://twitter.com/internetrebecca">Rebecca Williams</a>, and <a href="http://twitter.com/mattbailey0">Matt Bailey</a>.</p>
   </body>
 </html>
