--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <strong>Friday Dec. 6  pre-party at MapBox</strong> is for everyone! Sign up: <a href="http://techladyparty.eventbrite.com">techladyparty.eventbrite.com</a>.
 </p>
 
+<p>This hackathon is brought to you by <a href="http://twitter.com/leahbannon">Leah Bannon</a> with Code for DC and Tech LadyMafia, and <a href="http://twitter.com/diplokat">Kat Townsend</a>, <a href="http://twitter.com/higgjen">Jen Higgens</a>, <a href="http://twitter.com/svt827">Shannon Turner</a>, <a href="http://twitter.com/sarah_rigdon">Sarah Rigdon</a>, <a href="http://twitter.com/internetrebecca">Rebecca Williams</a>, and <a href="http://twitter.com/mattbailey0">Matt Bailey</a>.</p>
+
 <p><strong>Training</strong><br/>
 We're going to offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project.</p>
 <p>Right now, we're planning to offer: Ruby, APIs, Python, JavaScript, GitHub, html/CSS, and SQL. Mentoring session ideas so far are: Empowerment/imposter syndrome, open gov/open data, and a business lady session. Ideas? Are we missing anything important? Submit issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a> or <a href="mailto:leahbannon@gmail.com">email</a>.</p>
@@ -48,6 +50,6 @@ We're going to offer basic 101 intro training and mentoring workshops throughout
 We're planning to work on some awesome projects and challenges, mostly with a focus on open gov projects and helping out some cool lady small business. Please submit ideas!
 </p>  
 <h3>Questions? Ideas? Advice?</h3>
-<p>Please feel free to reach out via <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a> with any questions, ideas, or issues. This hackathon is brought to you by <a href="http://twitter.com/leahbannon">Leah Bannon</a> with Code for DC and Tech LadyMafia, and <a href="http://twitter.com/diplokat">Kat Townsend</a>, <a href="http://twitter.com/higgjen">Jen Higgens</a>, <a href="http://twitter.com/svt827">Shannon Turner</a>, <a href="http://twitter.com/sarah_rigdon">Sarah Rigdon</a>, <a href="http://twitter.com/internetrebecca">Rebecca Williams</a>, and <a href="http://twitter.com/mattbailey0">Matt Bailey</a>.</p>
+<p>Please feel free to reach out via <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a> with any questions, ideas, or issues.</p>
   </body>
 </html>
