--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>TechLady Hackathon + Training Day</h1>
         <p>December 7, 2013</p>
 
-        <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub <br/><small>leahbannon/hackathontrainingday</small></a></p>
+        <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub</a></p>
         <p class="view">Short link: <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a> <br/><small>Long link: <a href="http://hackathontrainingday.org">hackathontrainingday.org</a></small></p>
         <br/>
         <p class="view"><strong>Discuss!</strong><br/><small>Please share your question/comment/idea/suggestion!</small></p>
