--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>This hackathon is brought to you by <a href="http://twitter.com/leahbannon">Leah Bannon</a> with <a href="http://codefordc.org">Code for DC</a> and <a href="http://techladymafia.com/">Tech LadyMafia</a>, and <a href="http://twitter.com/diplokat">Kat Townsend</a>, <a href="http://twitter.com/higgjen">Jen Higgens</a>, <a href="http://twitter.com/svt827">Shannon Turner</a>, <a href="http://twitter.com/sarah_rigdon">Sarah Rigdon</a>, <a href="http://twitter.com/internetrebecca">Rebecca Williams</a>, and <a href="http://twitter.com/mattbailey0">Matt Bailey</a>.</p>
 
 <p><strong>Training</strong><br/>
-We're going to offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project.</p>
+We will offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project.</p>
 <p>Right now, we're planning to offer: Ruby, APIs, Python, JavaScript, GitHub, html/CSS, and SQL. Mentoring session ideas so far are: Empowerment/imposter syndrome, open gov/open data, and a business lady session. Ideas? Are we missing anything important? Submit issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a> or <a href="mailto:leahbannon@gmail.com">email</a>.</p>
 <p><strong>Hackathon</strong><br/>
 We're planning to work on some awesome projects and challenges, mostly with a focus on open gov projects and helping out some cool lady small business. Please submit ideas!
