--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ We will offer basic 101 intro training and mentoring workshops throughout the da
 <p><strong>Hackathon</strong><br/>
 We're planning to work on some awesome projects and challenges, mostly with a focus on open gov projects and helping out some cool lady small business. Please submit ideas!
 </p>  
+<p><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/mapboxparty.jpg?raw=true"/></p>
 <h3>Questions? Ideas? Advice?</h3>
 <p>Please feel free to reach out via <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a> with any questions, ideas, or issues.</p>
   </body>
