adding donor logos

--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@ We're planning to work on some awesome projects and challenges, mostly with a fo
 <p><a href="http://www.eventbrite.com/e/party-before-the-techlady-hackathon-tickets-9506489165"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/mapboxparty.jpg?raw=true"/></a></p>
 <h3>Questions? Ideas? Advice?</h3>
 <p>Please feel free to reach out via <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a> with any questions, ideas, or issues.</p>
+
+<h3>Donors</h3>
+<p><a href="http://www.irex.org/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/irexlogo.jpg?raw=true"/></a></p>
+<p><a href="http://govtrack.us"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/logo_hires.png?raw=true"/></a></p>
+<p><a href="http://mapbox.com"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/mapbox-logo-512.png?raw=true"/></a></p>
+<p><a href="http://sunlightfoundation.com/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/SunlightFoundation-logo.png?raw=true"/></a></p>
   </body>
 </html>
