--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@ We're planning to work on some awesome projects and challenges, mostly with a fo
 <p><a href="http://govtrack.us"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/logo_hires.png?raw=true"/></a></p>
 <p><a href="http://mapbox.com"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/mapbox-logo-512.png?raw=true"/></a></p>
 <p><a href="http://sunlightfoundation.com/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/SunlightFoundation-logo.png?raw=true"/></a></p>
+<p><a href="http://neworganizing.com/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/noi_square_logo.jpg?raw=true"/></a></p>
   </body>
 </html>
