--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ We're planning to work on some awesome projects and challenges, mostly with a fo
 
 <h3>Donors</h3>
 <p><a href="http://www.irex.org/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/irexlogo.jpg?raw=true"/></a></p>
+<p><a href="http://github.com"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/Octocat.jpg?raw=true"</a></p>
 <p><a href="http://govtrack.us"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/logo_hires.png?raw=true"/></a></p>
 <p><a href="http://mapbox.com"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/mapbox-logo-512.png?raw=true"/></a></p>
 <p><a href="http://sunlightfoundation.com/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/SunlightFoundation-logo.png?raw=true"/></a></p>
