--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <strong>Friday Dec. 6  pre-party at MapBox</strong> is for everyone! Sign up: <a href="http://techladyparty.eventbrite.com">techladyparty.eventbrite.com</a>.
 </p>
 
-<p>This hackathon is brought to you by <a href="http://twitter.com/leahbannon">Leah Bannon</a> with <a href="http://codefordc.org">Code for DC</a> and <a href="http://techladymafia.com/">Tech LadyMafia</a>, and <a href="http://twitter.com/diplokat">Kat Townsend</a>, <a href="http://twitter.com/higgjen">Jen Higgens</a>, <a href="http://twitter.com/svt827">Shannon Turner</a>, <a href="http://twitter.com/sarah_rigdon">Sarah Rigdon</a>, <a href="http://twitter.com/internetrebecca">Rebecca Williams</a>, and <a href="http://twitter.com/mattbailey0">Matt Bailey</a>.</p>
+<p>This hackathon is brought to you by <a href="http://twitter.com/leahbannon">Leah Bannon</a> with <a href="http://codefordc.org">Code for DC</a> and <a href="http://techladymafia.com/">Tech LadyMafia</a>, and <a href="http://twitter.com/diplokat">Kat Townsend</a>, <a href="http://twitter.com/higgjen">Jen Higgens</a>, <a href="http://twitter.com/svt827">Shannon Turner</a>, <a href="http://twitter.com/sarah_rigdon">Sarah Rigdon</a>, <a href="http://twitter.com/internetrebecca">Rebecca Williams</a>, <a href="http://twitter.com/shaunalead">Shauna Dillavou</a>, and <a href="http://twitter.com/mattbailey0">Matt Bailey</a>.</p>
 
 <p><strong>Training</strong><br/>
 We will offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project.</p>
