--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <section>
         
 <h3>
+<p>Congratulations! The December DC TechLady Hackathon + Training Day was a huge success! We're working on a summary wrap up and planning to do this again in six months. Looking for more?? Sign up for the <a href="/newsletter.html">TechLady Hackathon + Training newsletter</a>, attend the next <a href="http://meetup.com/code-for-dc">Code for DC meetup</a>, and join the <a href="https://groups.google.com/forum/#!forum/dc-cfa-brigade">Code for DC Google group listserv</a>. Also, if you attended, <a href="/feedback.html">please share your feedback</a>!</p>
 <a name="about" class="anchor" href="#about-this-civic-hackathon"></a>About this  TechLady Hackathon + Training Day</h3>
 
 <p>Coders, tech strategists, trainers, newbies, and ideas are welcome! <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet at me</a> for the registration link.</p>
