--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
 <p><strong>Congratulations!</strong> The December DC TechLady Hackathon + Training Day was a huge success! We're working on a summary wrap up and planning to do this again in six months. Looking for more?? Sign up for the <a href="/newsletter.html">TechLady Hackathon + Training newsletter</a>, attend the next <a href="http://meetup.com/code-for-dc">Code for DC meetup</a>, and join the <a href="https://groups.google.com/forum/#!forum/dc-cfa-brigade">Code for DC Google group listserv</a>. Also, if you attended, <a href="/feedback.html">please share your feedback</a>!</p>
 
-<h3><a name="about" class="anchor" href="#about-this-civic-hackathon">About this  TechLady Hackathon + Training Day</a></h3>
+<h3>About this  TechLady Hackathon + Training Day</h3>
 
 <p>Coders, tech strategists, trainers, newbies, and ideas are welcome! <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet at me</a> for the registration link.</p>
 <p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech.</p>
