--- a/index.html
+++ b/index.html
@@ -36,25 +36,18 @@
 
 <h3>About the TechLady Hackathon + Training Day</h3>
 
-<p>Coders, tech strategists, trainers, newbies, and ideas are welcome! <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet at me</a> for the registration link.</p>
-<p>The goal of this hackathon + training day is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech.</p>
+<p>Coders, tech strategists, trainers, newbies, and ideas are welcome! Sign up for the <a href="/newsletter.html">TechLady Hackathon + Training newsletter</a> for details about the next TechLady Hackathon + Training Day (likely in early June)
+<p>The goal of these hackathon + training days is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons - especially <a href="http://codefordc.org">Code for DC</a>! We want you to walk away feeling inspired and empowered to get more involved in tech.</p>
 
-<p><strong>Saturday Dec. 7 Hackathon</strong> is for women identified folks. <a href="mailto:leahbannon@gmail.com">Email</a> or <a href="http://twitter.com/leahbannon">tweet at me</a> for the registration link.<br/>
-<strong>Friday Dec. 6  pre-party at MapBox</strong> is for everyone! Sign up: <a href="http://techladyparty.eventbrite.com">techladyparty.eventbrite.com</a>.
-</p>
-
-<p>This hackathon is brought to you by <a href="http://twitter.com/leahbannon">Leah Bannon</a> with <a href="http://codefordc.org">Code for DC</a> and <a href="http://techladymafia.com/">Tech LadyMafia</a>, and <a href="http://twitter.com/diplokat">Kat Townsend</a>, <a href="http://twitter.com/higgjen">Jen Higgens</a>, <a href="http://twitter.com/svt827">Shannon Turner</a>, <a href="http://twitter.com/sarah_rigdon">Sarah Rigdon</a>, <a href="http://twitter.com/internetrebecca">Rebecca Williams</a>, <a href="http://twitter.com/shaunalead">Shauna Dillavou</a>, <a href="https://twitter.com/OusmaneMariko">Ousmane Mariko</a> (who designed our logo), and <a href="http://twitter.com/mattbailey0">Matt Bailey</a>.</p>
+<p>The December 7 hackathon was brought to you by <a href="http://twitter.com/leahbannon">Leah Bannon</a> with <a href="http://codefordc.org">Code for DC</a> and <a href="http://techladymafia.com/">Tech LadyMafia</a>, and <a href="http://twitter.com/diplokat">Kat Townsend</a>, <a href="http://twitter.com/higgjen">Jen Higgens</a>, <a href="http://twitter.com/svt827">Shannon Turner</a>, <a href="http://twitter.com/sarah_rigdon">Sarah Rigdon</a>, <a href="http://twitter.com/internetrebecca">Rebecca Williams</a>, <a href="http://twitter.com/shaunalead">Shauna Dillavou</a>, <a href="https://twitter.com/OusmaneMariko">Ousmane Mariko</a> (who designed our logo), and <a href="http://twitter.com/mattbailey0">Matt Bailey</a>.</p>
 
 <p><strong>Training</strong><br/>
-We will offer basic 101 intro training and mentoring workshops throughout the day. Attend sessions all day or dip in and out while you contribute to a hackathon project.</p>
-<p>Right now, we're planning to offer: Ruby, APIs, Python, JavaScript, GitHub, html/CSS, and SQL. Mentoring session ideas so far are: Empowerment/imposter syndrome, open gov/open data, and a business lady session. Ideas? Are we missing anything important? Submit issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a> or <a href="mailto:leahbannon@gmail.com">email</a>.</p>
+We offer basic 101 intro training and mentoring workshops throughout the day - no prior knowledge of code is necessary. Attend sessions all day or dip in and out while you contribute to a hackathon project.</p>
+<p>In December, we offered 101s in Ruby, APIs, Python, GitHub, html/CSS, and SQL. Mentoring sessions were: Empowerment/imposter syndrome, open gov/open data, and lady mentoring session. Ideas? Are we missing anything important? Submit ideas as issues on <a href="https://github.com/leahbannon/hackathontrainingday/issues">this GitHub repo</a>, <a href="/feedback.html">submit to this form</a>, or<a href="mailto:leahbannon@gmail.com">email Leah</a>.</p>
 <p><strong>Hackathon</strong><br/>
-We're planning to work on some awesome projects and challenges, mostly with a focus on open gov projects and helping out some cool lady small business. Please submit ideas!
-</p>  
-<p><a href="http://www.eventbrite.com/e/party-before-the-techlady-hackathon-tickets-9506489165"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/mapboxparty.jpg?raw=true"/></a></p>
+This is a civic hackathon. In December, we worked on the <a href="http://eiti.org/">Extractive Industry Transparency Initiative</a> Open Data Project, data visualizations for the <a href="http://feedthefuture.gov/article/release-womens-empowerment-agriculture-index">Women's Empowerment in Agriculture Index</a>, Code for DC’s <a href="http://www.ancbrigade.com">ANC Brigade</a>, continuing art games created at The Smithsonian American Art Museum’s recent hackathon, <a href="http://shutthatdown.com/">ShutThatDown.com</a>, Health and Human Services datasets, GIS mapping in conflict zones, and more.</p>
 <h3>Questions? Ideas? Advice?</h3>
 <p>Please feel free to reach out via <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a> with any questions, ideas, or issues.</p>
-
 <h3>Donors</h3>
 <p><a href="http://www.irex.org/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/irexlogo.jpg?raw=true"/></a></p>
 <p><a href="http://github.com"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/Octocat.jpg?raw=true"</a></p>
