--- a/January2013.html
+++ b/January2013.html
@@ -30,7 +30,13 @@
         <p><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/techlady-22830.jpg?raw=true"/></p>
       </header>
       <section>
-      
+      <ul>
+	<li><strong>Tuesday Jan. 7, 6-9pm: Code for DC meetup.</strong> IMPORTANT: if you are looking for training, I maintain that attending meetups like Code for DC is one of the best ways to learn. This is the DC chapter of the Code for America Brigade. We are a group of volunteer civic hackers working together to solve local issues and help people engage with the city. We welcome all tech skill levels. <a href="http://www.meetup.com/code-for-dc" target="_self">RSVP LINK</a></li>
+	<li><strong>Saturday Jan. 11: DC Internet Freedom Hackathon</strong> Come help make it possible for Syrian citizen reporters, Mexican journalists, and Iranian political activists get their voices heard safely. <a href="http://www.communityred.org/" target="_self">CommunityRED</a>, with <a href="https://openitp.org/" target="_self">OpenITP</a>, is holding a hackathon to make security tools easier&nbsp;to use, so they&nbsp;need tech skills ranging from folks who have a keen eye and can evaluate how easy the site is to use to UX experts to developers who code in a variety of languages. <a href="https://www.eventbrite.com/e/dc-internet-freedom-hackathon-tickets-9306081741" target="_self">RSVP LINK</a></li>
+	<li><strong>Monday Jan. 13, 6:30-9pm: DC Hack and Tell</strong> This is a great new meetup. Anyone can present a project; you get 5 minutes to present and then 5 minutes for Q&amp;A. I haven&#39;t presented yet, but I love to hear what folks are working on. <a href="http://www.meetup.com/DC-Hack-and-Tell/" target="_self">RSVP LINK</a></li>
+	<li><strong>Weekend of Friday Jan 17: PDF Liberation Hackathon</strong>&nbsp;Extracting information from PDFs is a problem. Sunlight Foundation is organizing this hackathon to improve open source tools for PDF extraction. <a href="https://www.eventbrite.com/e/pdf-liberation-hackathon-2014-tickets-9111078481" target="_self">RSVP LINK</a></li>
+	<li><strong>Wednesday Jan. 22, 6-9pm: Code for DC </strong>So nice, I listed it twice. This is our second meetup of the month. No RSVP link yet.</li>
+</ul>
       </section>
       </body>
 </html>
