--- a/newsletter.html
+++ b/newsletter.html
@@ -41,7 +41,7 @@
 <div id="mc_embed_signup">
 <form action="http://hackathontrainingday.us3.list-manage.com/subscribe/post?u=fa2fbc8ac3f779641e2b044f7&amp;id=0ec18fba83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	<h2>TechLady Hackathon + Training Newsletter</h2>
-	<p>Sign up for this newsletter to receive twice-monthly updates about awesome tech training, women in tech opportunities, and DC tech events.</p>
+	<p>Sign up for this newsletter to receive monthly updates about awesome tech training, women in tech opportunities, and DC tech events.</p>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
@@ -55,12 +55,6 @@
 <div class="mc-field-group">
 	<label for="mce-LNAME">Last Name </label>
 	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-</div>
-<div class="mc-field-group input-group">
-    <strong>Email Format </strong>
-    <ul><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">html</label></li>
-<li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">text</label></li>
-</ul>
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
